--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="AI-powered data analytics chatbot for intelligent data exploration"
     />
+    <meta name="copyright" content="© 2025 DSAgent. All rights reserved." />
     <title>Data Analytics Chatbot</title>
   </head>
   <body>
